--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=progettoSpringData
+
+# Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/u5d4
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.hibernate.ddl-auto=update
